force-app/main/default/objects/FSAM_Engineer_Assignment__c/FSAM_Engineer_Assignment__c.object-meta.xml
<CustomObject>
    <label>FSAM Engineer Assignment</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSAM Engineer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>