force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Accepted_Date__c</fullName>
    <description>Date and time when the engineer accepted the assignment.</description>
    <label>Accepted Date</label>
    <type>DateTime</type>
</CustomField>