force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Assigned_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the assignment was created.</description>
    <label>Assigned Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>