force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Assignment_Notes__c</fullName>
    <description>Additional information related to the assignment.</description>
    <label>Assignment Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>