force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Assignment_Status__c</fullName>
    <description>Current lifecycle status of the engineer assignment.</description>
    <inlineHelpText>Select the current status of the assignment.</inlineHelpText>
    <label>Assignment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>