force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Completed_Date__c</fullName>
    <description>Date and time when the engineer completed the assignment.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>