force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Engineer__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Engineer assigned to perform the service request.</description>
    <inlineHelpText>Select the engineer assigned to this service request.</inlineHelpText>
    <label>Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSAM_Engineer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>