force-app/main/default/objects/FSAM_Engineer_Assignment__c/fields/FSAM_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Service_Request__c</fullName>
    <description>Service Request associated with this engineer assignment.</description>
    <label>Service Request</label>
    <referenceTo>FSAM_Service_Request__c</referenceTo>
    <relationshipLabel>FSAM Engineer Assignments</relationshipLabel>
    <relationshipName>FSAM_Engineer_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>