force-app/main/default/objects/FSAM_Engineer_Assignment__c/validationRules/FSAM_VR_Accepted_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Accepted_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(FSAM_Accepted_Date__c)),
    FSAM_Accepted_Date__c &lt; FSAM_Assigned_Date__c
)</errorConditionFormula>
    <errorDisplayField>FSAM_Accepted_Date__c</errorDisplayField>
    <errorMessage>Accepted Date cannot be earlier than Assigned Date.</errorMessage>
</ValidationRule>