force-app/main/default/objects/FSAM_Engineer_Assignment__c/validationRules/FSAM_VR_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(FSAM_Accepted_Date__c)),
    NOT(ISBLANK(FSAM_Completed_Date__c)),
    FSAM_Completed_Date__c &lt; FSAM_Accepted_Date__c
)</errorConditionFormula>
    <errorDisplayField>FSAM_Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date cannot be earlier than Accepted Date.</errorMessage>
</ValidationRule>