force-app/main/default/objects/FSAM_Engineer_Assignment__c/validationRules/FSAM_VR_Engineer_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Engineer_Assignment</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FSAM_Engineer__c)</errorConditionFormula>
    <errorDisplayField>FSAM_Engineer__c</errorDisplayField>
    <errorMessage>Please assign an engineer before saving the assignment.</errorMessage>
</ValidationRule>