force-app/main/default/objects/FSAM_Engineer_Assignment__c/validationRules/FSAM_VR_Status_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Status_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(FSAM_Assignment_Status__c, &quot;Completed&quot;),
    ISBLANK(FSAM_Completed_Date__c)
)</errorConditionFormula>
    <errorMessage>Completed Date is required when the assignment is marked Completed.</errorMessage>
</ValidationRule>